Updating javadoc header
Making sure all major classes have a javadoc header

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@
 /ListRA.class
 /Group.class
 /Groups.class
+/AscendinglyOrderedStringList.class
+/AscendinglyOrderedStringListInterface.class
+/Theater.class
+/TheaterInterface.class
