Added Javadoc for Matthew's Interfaces
Added javadoc and interfaces for my classes.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /AscendinglyOrderedStringListInterface.class
 /Theater.class
 /TheaterInterface.class
+/RoomInterface.class
+/GroupInterface.class
